# HelloWorld

./: .gitignore  App.cpp  CMakeLists.txt  MainWindow.cpp  vcpkg.json
